Fix bugs with Dark mode button
I fixed the bug relative to the Dark mode button. I removed the text
and kept the icon only. I think it's much simpler and professional

--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,9 @@ a{
     border-radius: 15px;
     padding: 15px;
     cursor: pointer;
-    display:  block;
-    width: 125px;
+    display: flex;
+    justify-content: center;
+    width: 50px;
     margin: auto;
     transition: 500ms;
 }
@@ -114,4 +115,9 @@ a{
 }
 #github-icon:hover{
     transform: scale(1.3);
+}
+
+#mode i{
+    font-size: 50px;
+    
 }
